Fix bug where nav block other elements
At certain points in the middle breakpoint, the nav covers up part
of the logo because of it's white background. This fixes by changing
the background to transparent besides small sizes.

--- a/src/stylesheets/components/_navigation.scss
+++ b/src/stylesheets/components/_navigation.scss
@@ -71,6 +71,7 @@
 
   @include media($nav-width) {
     @include padding(5rem 0 0 null);
+    background: transparent;
     border-left: none;
     display: block;
     float: right;
